2011-06-03  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dpxfile.c (exec_spawn): Exit if execvp() fails, some clean up.

2011-06-03  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* dpxfile.c: fix a bug in exec_spawn().

2011-06-03  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (mapdata*): Do install the map file, still needed
	in pTeX.

2011-06-01  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (mapdata*): Don't install the map file.

2011-05-30  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* doc/Makefile.am: Use ../am/bin_links.am for $(bindir) links.

2011-05-03  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Imported snapshot 20110311.
	* configure.ac: Adapted.

2011-03-09  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Imported snapshot 20110309.
	* configure.ac: Adapted.

2011-03-08  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac: Check for sys/wait.h, in order to define
	HAVE_SYS_WAIT_H (required for src/dpxfile.c).

2011-03-07  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am, configure.ac: Proxy build system for TeX Live,
	using the dvipdfmx-20110305 distribution tree.
	* dvipdfmx-20110305-PATCHES: New directory with patches applied
	to the dvipdfmx-20110305 distribution.

2011-02-28  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* src/pngimage.c (create_cspace_ICCBased): Avoid libpng-1.5.x
	compiler warning.

2011-02-15  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* src/Makefile.am [WIN32]: Add dvipdfmx.exe, ebb.exe, and
	extractbb.exe wrappers for MinGW.

2010-02-11  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* man: New directory with manual pages (from Master).
	man/dvipdft.1 needs to be updated and man/dvipdfm.1 replaced by
	man/dvipdfmx.1 (with a link to dvipdfm.1).
	* Makefile.am, configure.ac: Adapted.

	* man/extractbb.1, man/dvipdfm.1, dvipdft.1: Formatting.

2010-12-30  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* src/dvipdfmx.c: Check for argv[0] with .exe via strcasecmp().

2010-12-29  Peter Breitenlohner  <peb@mppmu.mpg.de>
